# OpenAI-OAuth-CLI

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  README.zh-CN.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css
scripts/: batch_login.py
src/openai_auth_core/: __init__.py  accounts_db.py  browser_actions.py  browser_base.py  callback.py  flow.py  humanize.py  mailbox.py  oauth.py  oauth_pages.py  runtime_config.py
src/openai_oauth_cli/: accounts_db.py  admin_server.py  admin_shell_css.py  admin_shell_html.py  admin_shell_js.py  admin_views.py  browser.py  cli.py  inbox_service.py  mailbox.py  models.py  oauth.py  pages.py  state_machine.py
src/openai_register/: __init__.py  accounts_db.py  browser.py  callback.py  cli.py  diagnostics.py  humanize.py  mailbox.py  models.py  oauth.py  pages.py  state_machine.py
tasks/: prd-openai-oauth-cli.md
tests/: test_accounts_db.py  test_admin_server.py  test_auth_core_callback.py  test_auth_core_flow.py  test_auth_core_mailbox.py  test_auth_core_oauth.py  test_auth_core_oauth_pages.py  test_batch_login_script.py  test_callback.py  test_cli.py  test_cli_db.py  test_humanize.py  test_inbox_service.py  test_mailbox.py  test_oauth.py  test_oauth_network.py  test_pages.py  test_register_accounts_db.py  test_register_cli.py  test_register_diagnostics.py  test_register_mailbox.py  test_register_pages.py  test_register_state_machine.py  test_smoke.py  test_state_machine.py
tests/e2e/: conftest.py  test_live_flows.py  (+1 more)
(+6 files in other folders)
